<resources>
    <string name="app_name">MyHealth</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Aanmelden</string>
    <string name="action_sign_in_short">Aanmelden</string>
    <string name="error_invalid_email">Het e-mailadres is ongeldig</string>
    <string name="error_invalid_password">Het wachtwoord is te kort</string>
    <string name="error_incorrect_password">Het wachtwoord is ongeldig</string>
    <string name="error_field_required">Dit is een verplicht veld</string>
    <string name="permission_rationale"></string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name ="app_title">MyHealth</string>

    <string name="title_profile">Profile</string>
    <string name="title_measurement">Measurements</string>

    <string name="profile_naam">Naam</string>
    <string name="profile_achternaam">Achternaam</string>
    <string name="profile_land">Land</string>
    <string name="profile_plaats">Plaats</string>
    <string name="profile_straat">Straat</string>
    <string name="profile_huisnr">Huisnummer</string>
    <string name="profile_toevoeging">Toevoeging</string>
    <string name="profile_telnr1">Telefoonnummer 1</string>
    <string name="profile_telnr2">Telefoonnummer 2</string>
    <string name="profile_email">Email</string>
    <string name="profile_reknr">Rekeningnummer</string>

    <string name="measurement_list_header_datum">Rekeningnummer</string>
    <string name="measurement_list_header_type">Rekeningnummer</string>
    <string name="measurement_list_header_waarde">Rekeningnummer</string>

    <string name="test_measurement">Measurement</string>
</resources>
